[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memvana"
version = "0.1.0"
description = "Universal ingestion -> knowledge graph -> persistent memory for AI agents. Turn anything into a queryable graph that remembers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ramesh", email = "ramesh.aiorchestrator@gmail.com" }]
keywords = [
    "knowledge-graph",
    "memory",
    "markdown",
    "ai-agents",
    "claude-code",
    "ingestion",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markitdown>=0.1.0",
]

[project.optional-dependencies]
all = ["markitdown[all]>=0.1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
memvana = "memvana.cli:main"

[project.urls]
Homepage = "https://github.com/ramesh-aiorchestrator/memvana"
Issues = "https://github.com/ramesh-aiorchestrator/memvana/issues"

[tool.setuptools.packages.find]
include = ["memvana*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
